# cosmic-ext-applet-weather

./: .gitignore  Cargo.toml  README.md  i18n.toml  io.github.cosmic_utils.weather-applet.json  justfile
.github/workflows/: rust.yml
data/: cosmic-ext-applet-weather.desktop  io.github.cosmic_utils.weather-applet.desktop  io.github.cosmic_utils.weather-applet.metainfo.xml
flatpak/: generate-cargo-sources.sh
i18n/bg/: cosmic_ext_applet_weather.ftl
i18n/cs/: cosmic_ext_applet_weather.ftl
i18n/en/: cosmic_ext_applet_weather.ftl
i18n/es/: cosmic_ext_applet_weather.ftl
i18n/fi/: cosmic_ext_applet_weather.ftl
i18n/pl/: cosmic_ext_applet_weather.ftl
i18n/pt-BR/: cosmic_ext_applet_weather.ftl
i18n/pt-br/: cosmic_ext_applet_weather.ftl
i18n/ru/: cosmic_ext_applet_weather.ftl
i18n/sv/: cosmic_ext_applet_weather.ftl
i18n/uk/: cosmic_ext_applet_weather.ftl
repo/: summary  summary.idx
repo/refs/heads/app/io.github.cosmic_utils.weather-applet/x86_64/: master
repo/refs/heads/runtime/io.github.cosmic_utils.weather_applet.Debug/x86_64/: master
repo/summaries/: 66c21166394770cc0d6fc1f37bd2e3ed36f407835d141f42d5ddcde505cf200b-e817fdb30c096842f618938542eb4a9c07d3262e9a765a4236e7d6e1c1a640a5.delta
src/: applet.rs  config.rs  i18n.rs  lib.rs  main.rs  weather.rs
sv/: cosmic_ext_applet_weather.ftl
