[package]
name = "cosmic-ext-applet-weather"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["rwxroot <rwxroot@proton.me>"]
homepage = "https://github.com/cosmic-utils/cosmic-ext-applet-weather/"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-weather.git"

[profile.release]
lto = "fat"

[dependencies]
chrono = { version = "0.4.41",default-features = false }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
	"applet",
] }
reqwest = { version = "0.12.20", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = "1.0.219"
serde_derive = "1.0.219"
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
	"ansi",
	"env-filter",
] }

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
